# SQLiteView

./: .gitignore  LICENSE  LICENSE_ja  MANIFEST.in  Makefile  PLAN.md  README.md  README_ja.md  pyproject.toml
.claude/rules/: code-quality.md
.github/workflows/: ci.yml
docs/: architecture.md  assumptions.md
scripts/: build_deb.sh  run_app.sh
src/sqliteviewer/: __init__.py  __main__.py  app.py  database.py  mainwindow.py  sql_highlighter.py  theme.py
src/sqliteviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sqliteviewer/resources/: __init__.py  dark.qss  light.qss  sqliteviewer.desktop
tests/: test_database.py  test_mainwindow.py
