[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqliteview"
version = "0.2.1"
description = "Cross-platform PyQt6-based SQLite database browser"
readme = "README.md"
authors = [
  { name = "SQLite Viewer Team", email = "dev@example.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["sqlite", "viewer", "pyqt6", "cross-platform", "database", "gui"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Environment :: X11 Applications :: Qt",
  "Topic :: Database"
]
dependencies = [
  "PyQt6>=6.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-qt>=4.2",
  "python-dotenv>=1.0",
  "build>=1.0.3"
]

[project.urls]
Homepage = "https://github.com/kwrkb/SQLiteView"
Repository = "https://github.com/kwrkb/SQLiteView"

[project.scripts]
sqliteview = "sqliteviewer.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sqliteviewer"]

[tool.hatch.build.targets.wheel.force-include]
"src/sqliteviewer/resources" = "sqliteviewer/resources"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
